--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "raf": "^3.3.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-toolbox": "^2.0.0-beta.12",
+    "react-toolbox-themr": "^1.0.2",
     "react-google-maps": "^7.0.0",
     "react-scripts": "1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
+    "toolbox": "react-toolbox-themr",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
